--- a/hugo.toml
+++ b/hugo.toml
@@ -12,15 +12,15 @@ responsiveImages = true  # Aggiungi questa linea per definire il parametro respo
 
 ShowPostNavLinks = true
 
-[[menu.main]]
-identifier = "categories"
-name = "Categories"
-url = "/categories/"
-weight = 10
+#[[menu.main]]
+#identifier = "categories"
+#name = "Categories"
+#url = "/categories/"
+#weight = 10
 
-[[menu.main]]
-identifier = "archives"
-name = "archives"
-url = "/archives/"
-weight = 20
+#[[menu.main]]
+#identifier = "archives"
+#name = "archives"
+#url = "/archives/"
+#weight = 20
 
