--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,7 @@ baseURL = ''
 languageCode = 'it'
 title = 'leggiamolo'
 theme = "PaperMod"
+copyright = "Gabriele Cucinotta"
 
 [params]
 ShowBreadCrumbs = true
